experimental/parser/testdata/parser/field/group_proto3.proto.stderr.txt
error: group syntax is not supported
  --> testdata/parser/field/group_proto3.proto:6:5
   |
 6 |     group G = 1 {}
   |     ^^^^^
   = note: group syntax is only available in proto2

encountered 1 error
